# ot_harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: testdatabase.sqlite
dokumentaatio/: changelog.md  luokkakaavio.md  tuntikirjanpito.md  vaatimusmaarittely.dm
laskarit/: viikko1.md
laskarit/viikko2/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Monopoli_luokkakaavio.md  sekvenssikaavio.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: task.py  user.py
src/repositories/: task_repository.py  user_repository.py
src/services/: dayplan_service.py
src/tests/: conftest.py  dayplan_service_test.py  task_repository_test.py  user_repository_test.py
src/ui/: add_plans_view.py  create_user_view.py  dayplan_view.py  login_view.py  timeline_view.py  ui.py
