[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Dodo <dodoloksttrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
autopep8 = "^2.3.2"
coverage = "^7.8.0"
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
